Added CSS and some place holders

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1>My Favorite Recipes</h1> 
    <h2><a href="./recipes/dip.html">The Vommit Dip</a></h2>
     
     <h2><a href="./recipes/banana-sandwich.html">Banana Sandwich</a></h2>
+
+    <h2>PLACE HOLDER</h2>
+
+    <h2>PLACE HOLDER</h2>
+
+    <h2>PLACE HOLDER</h2>
     
 </body>
 </html>
