--- a/recipes/dip.html
+++ b/recipes/dip.html
@@ -7,8 +7,7 @@
     <title>Vommit Dip Recipe</title>
 </head>
 <body>
-    <h1>Vommit Dip
-    </h1>
+    <h1>Vommit Dip</h1>
     <img src="../img/dip.jpeg">
     <h2>Description</h2>
     <p>This cheesy, somewhat spicy, deliciousness might look like someone had a little too much vodka last night and decided to empty the contents of their stomach in to your bowl... but <em>have faith!</em> <strong>is the most addictive dip you'll ever make!</strong> </p>
