--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>My Favorite Recipes</h1> 
+   <div class="title">My Favorite Recipes</div> 
    <h2><a href="./recipes/dip.html">The Vommit Dip</a></h2>
     
     <h2><a href="./recipes/banana-sandwich.html">Banana Sandwich</a></h2>
